<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/sectionListBorder"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:background="#0000ff"
        android:orientation="vertical"
        android:padding="@dimen/borderThickness"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight="1" >

        <ListView
            android:id="@+id/adventure_edit_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#ffffff" >
        </ListView>
    </LinearLayout>

    <Button
        android:id="@+id/GetOnlineVersionButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onGetOnline"
        android:text="@string/getOnline" >
    </Button>
    
    <Button
        android:id="@+id/TempDownloadButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onUploadClick"
        android:text="@string/download" >
    </Button>
    
    <Button
        android:id="@+id/TempUploadButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onUploadClick"
        android:text="@string/upload" >
    </Button>
    
    <Button
        android:id="@+id/AddNoteButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="launchSectionEditView"
        android:text="@string/new_section" >
    </Button>

</LinearLayout>
