<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView 
        android:text="@string/selected_choices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:id="@+id/selectedSectionListBorder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#0000ff"
        android:orientation="vertical"
        android:paddingBottom="@dimen/borderThickness"
        android:paddingLeft="@dimen/borderThickness"
        android:paddingRight="@dimen/borderThickness"
        android:paddingTop="@dimen/borderThickness"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight="1" >

        <ListView
            android:id="@+id/selectedSectionList"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="#ffffff" >
        </ListView>
    </LinearLayout>

    <TextView 
        android:text="@string/possible_choices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
        <LinearLayout
        android:id="@+id/completeSectionListBorder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#0000ff"
        android:orientation="vertical"
        android:paddingBottom="@dimen/borderThickness"
        android:paddingLeft="@dimen/borderThickness"
        android:paddingRight="@dimen/borderThickness"
        android:paddingTop="@dimen/borderThickness"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight="1" >

        <ListView
            android:id="@+id/completeSectionList"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="#ffffff" >
        </ListView>
    </LinearLayout>
    
    <Button
        android:id="@+id/AddNoteButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_section"
        android:onClick="newSectionChoice"
        android:layout_weight="0" >
    </Button>

</LinearLayout>